DFR-1074: Set up for use of FinremCaseDetails object